--- a/src/index.css
+++ b/src/index.css
@@ -2,31 +2,30 @@
     font-family: sans-serif;
     font-size: 1rem;
 
-    /* Colors */
     --color-primary: rgb(112, 37, 217); /*  */
     --color-secondary: rgb(81, 118, 207);
     --color-accent: #551BA6;
     --color-background: #fdfcfc;
     --color-text: #232b39;
 
-    /* Spacing */
-    --spacing-xs: 0.25rem; /* 4px */
-    --spacing-sm: 0.5rem; /* 8px */
-    --spacing-md: 1rem; /* 16px */
-    --spacing-lg: 2rem; /* 32px */
-    --spacing-xl: 4rem; /* 64px */
+    --spacing-xs: 0.25rem;
+    --spacing-sm: 0.5rem;
+    --spacing-md: 1rem;
+    --spacing-lg: 2rem;
+    --spacing-xl: 4rem;
 
     --font-size-sm: 0.5rem;
-    --font-size-base: 1rem; /* 16px */
-    --font-size-lg: 1.25rem; /* 20px */
-    --font-size-xl: 2rem; /* 32px */
+    --font-size-base: 1rem;
+    --font-size-md: 1.15rem;
+    --font-size-lg: 1.25rem;
+    --font-size-xl: 2rem;
 
     --font-weight-normal: 400;
     --font-weight-bold: 700;
 
-    --border-radius-sm: 0.125rem; /* 2px */
-    --border-radius-md: 0.375rem; /* 6px */
-    --border-radius-lg: 0.5rem; /* 8px */
+    --border-radius-sm: 0.125rem;
+    --border-radius-md: 0.375rem;
+    --border-radius-lg: 0.5rem;
 
     --shadow-sm: 0 1px 3px rgba(0, 0, 0, 0.12);
     --shadow-md: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
