--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
     --border-radius-lg: 0.5rem;
 
     --shadow-sm: 0 1px 3px rgba(0, 0, 0, 0.12);
-    --shadow-md: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
+    --shadow-md: rgba(0, 0, 0, 0.05) 0px 1px 4px;;
     --shadow-lg: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
 
